Resolve "Horizontal scroll in modal"

--- a/src/components/handbook/_component.scss
+++ b/src/components/handbook/_component.scss
@@ -47,6 +47,7 @@ h1 {
   pointer-events: none;
   border: 2px solid $jnt-secondary-background;
   max-width: 100%;
+  box-sizing: border-box;
 }
 
 //
